--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-opencv-python
-pytesseract
-numpy
+opencv-python-headless==4.7.0.72
+pytesseract==0.3.10
 googletrans==4.0.0-rc1
-moviepy
-streamlit
+moviepy==1.0.3
+streamlit==1.15.0
+numpy==1.24.0
