--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-opencv-python-headless==4.7.0.72
-pytesseract==0.3.10
+streamlit==1.41.1
+opencv-python-headless==4.8.0.74
+pytesseract==0.4.1
+numpy==1.24.1
 googletrans==4.0.0-rc1
-moviepy==1.0.3
-streamlit==1.15.0
-numpy==1.24.0
+pillow==8.4.0
+matplotlib==3.7.1
